operators/k8s-triliovault/5.0.2/manifests/mutation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: tvm-mutating-webhook-configuration
  labels:
    app.kubernetes.io/part-of: k8s-triliovault-operator
    app.kubernetes.io/name: k8s-triliovault-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: k8s-triliovault-operator-mutating-webhook-configuration
webhooks:
  - clientConfig:
      service:
        name: k8s-triliovault-operator-webhook-service
        namespace: trilio-system
        path: /mutate-triliovault-trilio-io-v1-triliovaultmanager
    failurePolicy: Fail
    name: v1-tvm-mutation.trilio.io
    rules:
      - apiGroups:
          - triliovault.trilio.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - triliovaultmanagers
    sideEffects: None
    admissionReviewVersions:
      - v1
