operators/k8s-triliovault/5.0.2/manifests/validation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: tvm-validating-webhook-configuration
  labels:
    app.kubernetes.io/part-of: k8s-triliovault-operator
    app.kubernetes.io/name: k8s-triliovault-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: k8s-triliovault-operator-validating-webhook-configuration
webhooks:
  - clientConfig:
      service:
        name: k8s-triliovault-operator-webhook-service
        namespace: trilio-system
        path: /validate-triliovault-trilio-io-v1-triliovaultmanager
    failurePolicy: Fail
    name: v1-tvm-validation.trilio.io
    rules:
      - apiGroups:
          - triliovault.trilio.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - triliovaultmanagers
    sideEffects: None
    admissionReviewVersions:
      - v1
  - clientConfig:
      service:
        name: k8s-triliovault-operator-webhook-service
        namespace: trilio-system
        path: /validate-core-v1-secret
    failurePolicy: Fail
    name: v1-encryption-secret-validation.trilio.io
    objectSelector:
      matchExpressions:
        - key: triliovault.trilio.io/master-secret
          operator: Exists
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - DELETE
          - UPDATE
        resources:
          - secrets
    sideEffects: None
    admissionReviewVersions:
      - v1
  - clientConfig:
      service:
        name: k8s-triliovault-operator-webhook-service
        namespace: trilio-system
        path: /validate-core-v1-namespace
    failurePolicy: Fail
    name: v1-tvm-ns-validation.trilio.io
    namespaceSelector:
      matchExpressions:
        - key: trilio-operator-label
          operator: In
          values:
            - trilio-system
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - namespaces
        scope: '*'
    sideEffects: None
    admissionReviewVersions:
      - v1
